[metadata]
name = plover-output-dotool
version = 0.0.1
author = Christian Zimmerer
descriptiong = plover plugin to output using dotool
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
url = https://git.d2evs.net/~evan/plover-wtype-output
classifiers =
    Environment :: Plugins
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
  setuptools>=30.3.0
install_requires =
  plover>=4.0.0.dev10
packages = plover_wtype_output

[options.entry_points]
plover.extension =
  plover_wtype_output = plover_wtype_output:Main
plover.output =
  plover_wtype_output = plover_wtype_output:KeyboardEmulation
